--- a/Assets/Code/Runtime/HeroFighter.Runtime.asmdef
+++ b/Assets/Code/Runtime/HeroFighter.Runtime.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "HeroFighter.Runtime",
-    "rootNamespace": "HeroFighter.Runtime",
+    "name": "HeroFighter",
+    "rootNamespace": "HeroFighter",
     "references": [
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:f51ebe6a0ceec4240a699833d6309b23"
